<resources>
    <string name="hello">RollCall!</string>
    <string name="setInstitution1">Welcome to RollCall!  In order to use the software, you must first pick an institution.</string>
    <string name="setInstitution2">Please pick an Institution:</string>
    <string name="txtStudentId">StudentId:</string>
    <string name="lblStudentId">Enter a Student Id:</string>
    <string name="SetStudent">Set Student</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Roll Call</string>
    <string name="btnSubmitText">Submit</string>
    <string name="txtStatusText">Status</string>
    <string name="android">android</string>
    <string name="test">test</string>
    <color name="cornflowerblue">#6495ED</color>
    <color name="white">#FFFFFF</color>
    <color name="yellow">#FFFF00</color>
    <color name="fuchsia">#FF00FF</color>
    <color name="red">#FF0000</color>
    <color name="silver">#C0C0C0</color>
    <color name="gray">#808080</color>
    <color name="olive">#808000</color>
    <color name="purple">#800080</color>
    <color name="maroon">#800000</color>
    <color name="aqua">#00FFFF</color>
    <color name="lime">#00FF00</color>
    <color name="teal">#008080</color>
    <color name="green">#008000</color>
    <color name="blue">#0000FF</color>
    <color name="navy">#000080</color>
    <color name="black">#000000</color>
    <color name="sysBlack">#FF000000</color>
    <color name="sysBlue">#FF0000FF</color>
    <color name="sysCyan">#FF00FFFF</color>
    <color name="sysDkGray">#FF444444</color>
    <color name="sysGray">#FF888888</color>
    <color name="sysGreen">#FF00FF00</color>
    <color name="sysLtGray">#FFCCCCCC</color>
    <color name="sysMagenta">#FFFF00FF</color>
    <color name="sysRed">#FFFF0000</color>
    <color name="sysTransparent">#00000000</color>
    <color name="sysWhite">#FFFFFFFF</color>
    <color name="sysYellow">#FFFFFF00</color>
    <string name="menu_settings">Settings</string>
    <string name="menu_setting1">Add Instructor</string>
    <string name="menu_setting2">Add Class</string>
    <string name="menu_setting3">Add Student</string>
    <string name="title_activity_main">Launch Demo</string>
    <string name="title_activity_add_instructor">Add Instructor</string>
    <string name="title_activity_add_class">Add Class</string>
    <string name="title_activity_add_student">Add Student</string>
    <string name="title_set_institution">Set Institution</string>
    <string name="Back">Back</string>
    <string name="Add">Add</string>
    <string name="Save">Save</string>
</resources>
