<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@layout/gradient"
    android:id="@+id/content"
    tools:context=".MainActivity">

    <TextView android:text="@string/hello"
        android:layout_width="wrap_content"
        android:id="@+id/txtInfo"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_height="wrap_content" />

    <TextView android:text="@string/txtStudentId"
        android:layout_width="wrap_content"
        android:id="@+id/txtStudentId"
        android:textColor="@color/white"
        android:layout_below="@id/txtInfo"
        android:textSize="30dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textSize="30dp"
        android:text="@string/clear" />

    <Button
        android:id="@+id/btnSetStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="30dp"
        android:layout_toLeftOf="@+id/btnClear"
        android:text="@string/SetStudent" />

    <TextView
        android:id="@+id/tvLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="94dp"
        android:textColor="@color/white"
        android:ems="10"/>
</RelativeLayout>
