<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@layout/gradient">

    <TextView
        android:id="@+id/lblStudentId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="400px"
        android:text="@string/lblStudentId" />

    <EditText
        android:id="@+id/txtStudentId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblStudentId"
        android:inputType="number"
        android:textColor="@color/white"
        android:ems="10"
        android:textSize="30dp"
        android:width="240dp" />

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:text="@string/Back" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:ems="10"
        android:layout_toLeftOf="@+id/Back"
        android:text="@string/save" />

</RelativeLayout>